--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
         "resolveJsonModule": true
     },
     "include": [
-        "src"
+        "src",
+        "test"
     ],
     "exclude": [
         "node_modules",
