--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ npm-debug.log
 .env
 .DS_Store
 dist
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
